Removed spacing bug on product page  by removing margin from link element.

--- a/_formals_css.css
+++ b/_formals_css.css
@@ -1531,7 +1531,6 @@ catProdListProductListCont div.loadingBG{
 	color: #E91454;
     float: left;
     font-size: 13px;
-    margin-left: 5px;
     margin-top: 31px;
     text-decoration: underline;
     width: 165px;
